DONE: During text input, display the screen keyboard if supported.
	Details: https://github.com/NagyD/SDLPoP/issues/286
FIXED: Save the current options (not the defaults) into the replay!
DONE: Made the source more readable.
	Details: https://github.com/NagyD/SDLPoP/issues/290
	Details: https://github.com/NagyD/SDLPoP/issues/291
	Details: https://github.com/NagyD/SDLPoP/issues/292
	Details: https://github.com/NagyD/SDLPoP/issues/296
DONE: Fixed the loading of OGG files which have no metadata. Updated stb_vorbis to v1.22.
FIXED: Check for button being pressed and released between game updates, reducing chances for dropped input.
	Details: https://github.com/NagyD/SDLPoP/issues/293
DONE: Added support for teleports. See USE_TELEPORTS in config.h.
	Each balcony (whose left half has a non-zero modifier) will behave as a teleport to another balcony with the same modifier.
	The right half of such balconies must have modifier == 1.
FIXED: Fix guards disappearing when the player (re-)enters the currently shown room.
	See FIX_DISAPPEARING_GUARD_A and FIX_DISAPPEARING_GUARD_B in config.h.
FIXED: Fix crashing with the guard graphics of Christmas of Persia. (with SDL_image 2.6.2)
FIXED: Fix the background color of teleport images on SDL_image 2.6.2, where they are loaded as RGBA.
DONE: Added a rounded border around the icon.
FIXED: Select "SETTINGS" in the pause menu, if coming back from the settings menu.
DONE: Show the hotkeys for quicksave/load in the menu (instead of the splash screen). Mention the menu on the splash screen.
FIXED: Fixed some compiler and cppcheck warnings.
DONE: Keep disappearing guard logic for super high jump consistent with the stand-alone option.
	Details: https://github.com/NagyD/SDLPoP/pull/298
DONE: Updated doc/mod.ini based on SDLPoP.ini.


(no release date yet)
=================
(upcoming version)

FIXED: Letters above potions not showing up on the copy protection level.
	Details: https://github.com/NagyD/SDLPoP/pull/299