@@ -739,3 +739,5 @@ DONE: Updated doc/mod.ini based on SDLPoP.ini.
 
 FIXED: Letters above potions not showing up on the copy protection level.
 	Details: https://github.com/NagyD/SDLPoP/pull/299
+DONE: If the SDLPOP_SAVE_PATH environment variable is set, put all saves into the directory it points to.
+	Details: https://github.com/NagyD/SDLPoP/issues/301
